Add pymdownx.emoji and mermaid superfences extensions
Enables Material icons on homepage cards and mermaid diagram
rendering on architecture and topology pages.

--- a/zensical.toml
+++ b/zensical.toml
@@ -120,7 +120,14 @@ permalink = true
 [project.markdown_extensions.pymdownx.highlight]
 anchor_linenums = true
 
+[project.markdown_extensions.pymdownx.emoji]
+emoji_index = "zensical.extensions.emoji.twemoji"
+emoji_generator = "zensical.extensions.emoji.to_svg"
+
 [project.markdown_extensions.pymdownx.superfences]
+custom_fences = [
+  { name = "mermaid", class = "mermaid", format = "pymdownx.superfences.fence_code_format" },
+]
 
 [project.markdown_extensions.pymdownx.tabbed]
 alternate_style = true
