Add mike version provider for multi-version docs

--- a/zensical.toml
+++ b/zensical.toml
@@ -69,6 +69,9 @@ toggle.name = "Switch to system preference"
 [project.extra]
 generator = false
 
+[project.extra.version]
+provider = "mike"
+
 [[project.extra.social]]
 icon = "fontawesome/brands/github"
 link = "https://github.com/zeulewan/robot-docs"
