Add mike versioning with mkdocs.yml, replace lucide icons with material

--- a/zensical.toml
+++ b/zensical.toml
@@ -45,7 +45,7 @@ repo = "fontawesome/brands/github"
 media = "(prefers-color-scheme)"
 primary = "blue"
 accent = "blue"
-toggle.icon = "lucide/sun-moon"
+toggle.icon = "material/brightness-auto"
 toggle.name = "Switch to light mode"
 
 # Palette toggle for light mode
@@ -54,7 +54,7 @@ media = "(prefers-color-scheme: light)"
 scheme = "default"
 primary = "blue"
 accent = "blue"
-toggle.icon = "lucide/sun"
+toggle.icon = "material/brightness-7"
 toggle.name = "Switch to dark mode"
 
 # Palette toggle for dark mode
@@ -63,7 +63,7 @@ media = "(prefers-color-scheme: dark)"
 scheme = "slate"
 primary = "blue"
 accent = "blue"
-toggle.icon = "lucide/moon"
+toggle.icon = "material/brightness-4"
 toggle.name = "Switch to system preference"
 
 [project.extra]
