--- a/zensical.toml
+++ b/zensical.toml
@@ -45,7 +45,7 @@ repo = "fontawesome/brands/github"
 media = "(prefers-color-scheme)"
 primary = "blue"
 accent = "blue"
-toggle.icon = "material/brightness-auto"
+toggle.icon = "lucide/sun-moon"
 toggle.name = "Switch to light mode"
 
 # Palette toggle for light mode
@@ -54,7 +54,7 @@ media = "(prefers-color-scheme: light)"
 scheme = "default"
 primary = "blue"
 accent = "blue"
-toggle.icon = "material/brightness-7"
+toggle.icon = "lucide/sun"
 toggle.name = "Switch to dark mode"
 
 # Palette toggle for dark mode
@@ -63,14 +63,11 @@ media = "(prefers-color-scheme: dark)"
 scheme = "slate"
 primary = "blue"
 accent = "blue"
-toggle.icon = "material/brightness-4"
+toggle.icon = "lucide/moon"
 toggle.name = "Switch to system preference"
 
 [project.extra]
 generator = false
-
-[project.extra.version]
-provider = "mike"
 
 [[project.extra.social]]
 icon = "fontawesome/brands/github"
