--- a/zensical.toml
+++ b/zensical.toml
@@ -22,7 +22,7 @@ features = [
     "navigation.instant.prefetch",
     "navigation.instant.progress",
     "navigation.path",
-    "navigation.indexes",
+    # "navigation.indexes", # Do not add this back
     "navigation.prune",
     "navigation.sections",
     "navigation.tabs",
