style: add admonitions, grid cards, tabs, collapsible sections, and Tailscale diagram
- Add admonitions (tip, warning, danger, bug, success) across 5 pages
- Convert troubleshooting sections to collapsible admonitions
- Convert section index pages to Material grid cards
- Add tabbed content for Sim vs Real modes in architecture page
- Add Mermaid connection cascade diagram to Tailscale setup
- Enable navigation.tracking in zensical.toml

--- a/zensical.toml
+++ b/zensical.toml
@@ -27,6 +27,7 @@ features = [
     "navigation.sections",
     "navigation.tabs",
     "navigation.top",
+    "navigation.tracking",
     # Table of contents
     "toc.follow",
     # Header
